# RDMA-test

./: RCServer.cpp  README.md  ud_client.c  ud_server.c
rc_send/: CMakeLists.txt  rdma.h
test1/rc_write/: RCServer.cpp
test1/ud/: makefile
test2/rc_send/: RCClient.cpp  RCServer.cpp  rdma.cpp  rdma.h
test2/rc_write/: rdma.cpp
test2/ud/: UDClient.cpp  UDServer.cpp  rdma.cpp  rdma.h
test2/ud/C/: ud_client  ud_client.c  ud_server  ud_server.c
test2/ud/cq_ex/: CMakeLists.txt  UDClient.cpp  UDServer.cpp
test3/: UDClient.cpp  UDServer.cpp  rdma.cpp  rdma.h
ud/: ud_client.c  ud_server.c
测试发送特定大小数据包时延/rc_send/: RCClient.cpp
测试发送特定大小数据包时延/rc_write/: RCClient.cpp
